[tool.poetry]
name = "pycffdrs"
version = "0.0.6"
description = ""
authors = ["Sybrand Strauss <sybrand.strauss@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numba = "^0.53.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rpy2 = "^3.4.5"
pycodestyle = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
