[tool.poetry]
name = "pycffdrs"
version = "0.0.6"
description = ""
authors = ["Sybrand Strauss <sybrand.strauss@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7"
pycodestyle = "^2"
autopep8 = "^1"
pylint = "^2"
notebook = "^6.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
