[metadata]
name = cffdrs-sybrand.strauss
version = 0.0.4
author = Sybrand Strauss
author_email = sybrand.strauss@gmail.com
description = CFFDRS python version
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sybrand/pycffdrs
project_urls =
    Bug Tracker = https://github.com/sybrand/pycffdrs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    src = pycffdrs
packages = find:
python_requires = >=3.8,<3.10

[options.packages.find]
where = pycffdrs