[tool.poetry]
name = "pycffdrs_test_gen"
version = "0.1.0"
description = ""
authors = ["Sybrand Strauss <sybrand.strauss@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
rpy2 = "^3.5.1"

[tool.poetry.dev-dependencies]
notebook = "^6.4.10"
numpy = "^1.22.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
